# KERUIS_SHELL

./: CMakeLists.txt  README.md  main.cpp
app/: main.cpp
core/constexpr_utils/: CMakeLists.txt  compile_time_seed.ixx  hash.ixx  is_space.ixx  mod.constexpr_utils.ixx  string_literal.ixx
core/detail/: numeric_conversion.h
core/exception/: conversion_exception.h
core/image/: CMakeLists.txt  color.ixx  color_channel.ixx  color_constant.ixx  color_definitions.inc  color_space.ixx  color_tag.ixx  mod.image.ixx  pixel.ixx  pixel_HSL.ixx  pixel_HSLA.ixx  pixel_HSV.ixx  pixel_HSVA.ixx  pixel_RGB.ixx  pixel_RGBA.ixx  pixel_impl.ixx  pixel_traits.ixx  pixel_weights.ixx
core/image/color_builder/: black.ixx  color_builder.ixx  color_builder_impl.ixx  red.ixx  white.ixx  yellow.ixx
core/image/utils/: color_convert.ixx  color_parse.ixx
core/math/: CMakeLists.txt
core/math/concepts/: concepts.ixx  scalar.ixx  vector.ixx
core/math/tag/: tag.ixx  vec2_tag.ixx
core/math/traits/: traits.ixx  vec_traits.ixx
core/math/vec/: vec2.ixx  vec3.ixx  vec4.ixx
core/math/vec/vec2/: vec2_base.ixx  vec2_impl.cppm  vec2_ops.ixx
core/memory/: FixedBlockPool.h  allocator.cpp  allocator.h  new_allocator.h
core/meta/: always_false.h  concepts.h
core/render/: CMakeLists.txt  mod.render.ixx
core/render/input/: mod.render.input.ixx
core/render/input/keyboard/: keyboard.ixx  keyboard.types.ixx  keyboard_impl.cppm
core/render/input/mouse/: mouse.ixx  mouse.types.ixx  mouse_impl.cppm
core/render/utils/: frameLimiter.ixx  frameLimiter_impl.cppm  frameRateCounter.ixx  frameRateCounter_impl.cppm  mod.render.utils.ixx
core/string/: CMakeLists.txt  basic_string.h  basic_string.ixx  character_type.h  find_result.h  mod.string.ixx  string.h  string.ixx  string_box.h  string_box.ixx  string_category.h  string_category.ixx  string_core.h  string_core.ixx  string_trait.h  string_trait.ixx  string_type_conversion.h
core/string/types/: character_type.h
core/types/: tags.h
core/utils/: attributes.h  constexpr_switch.h  left_ptr_macro.h  type_traits.h
platform/: CMakeLists.txt  mod.platform.ixx
platform/common/: ICursorController.ixx  IWindow.ixx
platform/win32/: CursorController.win32.ixx  Window.win32.ixx
ui/input/: input.h
ui/vulkan/: 1.h
